--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,70 @@
-/*  */
+/*body  */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f8f8;
+  margin: 0;
+  padding: 0;
+}
+
+/* Library  */
+.book-library {
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+}
+
+/*Title */
+.book-library h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/*Book  */
+.book {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  margin-bottom: 15px;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.book img {
+  width: 120px;
+  height: auto;
+  border-radius: 4px;
+	margin-bottom:14px;
+}
+
+/*Book details */
+.book-details {
+  flex: 1;
+  margin-left: 15px;
+}
+
+.book-details h2 {
+  font-size: 18px;
+  margin: 0;
+}
+
+.book-details p {
+  margin: 5px 0;
+  color: #777777; 
+}
+
+/*Price block buy */
+.price-block {
+  background-color: rgb(46, 204, 113); 
+  color: rgb(255, 255, 255);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+}
