--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,55 @@
-/*body  */
-body {
-  font-family: Arial, sans-serif;
+
+/* Your CSS Code here. */
+
+*{
+	padding:0;
+	margin:0;
+	font-family:Arial;
+}
+
+body{
   background-color: #f8f8f8;
-  margin: 0;
-  padding: 0;
-}
-
-/* Library  */
-.book-library {
-  max-width: 800px;
-  margin: 20px auto;
-  background-color: #ffffff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  padding: 20px;
-}
-
-/*Title */
-.book-library h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-/*Book  */
-.book {
   display: flex;
-  flex-direction:column;
-  align-items: center;
   justify-content: center;
-  padding: 15px;
-  margin-bottom: 15px;
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  align-items: center;
+}
+h1{
+  margin: 50px;
 }
 
-.book img {
-  width: 120px;
-  height: auto;
-  border-radius: 4px;
-	margin-bottom:14px;
+.book-library{
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-/*Book details */
-.book-details {
-  flex: 1;
-  margin-left: 15px;
+.book{
+  width: 100vw;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  /* author color #777777 */
+  /* price-block color #2ecc71 */
+}
+h2{
+  margin: 10px;
+}
+.author{
+  margin: 10px;
+  color: #777777;
 }
 
-.book-details h2 {
-  font-size: 18px;
-  margin: 0;
-}
-
-.author {
-  margin: 5px 0;
-  color: #777777; 
-}
-
-/*Price block buy */
-.price-block {
-  background-color: rgb(46, 204, 113); 
-  color: rgb(255, 255, 255);
-  padding: 5px 10px;
+.price-block{
+  margin: 10px;
+  background-color: #2ecc71;
+  color: white;
+  padding: 20px;
   border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
 }
+
+
+
+
