--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ h1{
   /* author color #777777 */
   /* price-block color #2ecc71 */
 }
+.book-details{
+  background-color:rgb(46, 204, 113) ;
+}
 h2{
   margin: 10px;
 }
@@ -44,7 +47,7 @@ h2{
 
 .price-block{
   margin: 10px;
-  background-color: #2ecc71;
+  background-color: rgb(46, 204, 113);
   color: white;
   padding: 20px;
   border-radius: 5px;
