--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ h1{
 }
 
 .book{
+  margin: 10px;
+  border-radius: 10px;
   width: 100vw;
   display: flex;
     flex-direction: column;
@@ -37,7 +39,7 @@ h1{
 .book-details{
   /* background-color:rgb(46, 204, 113) ; */
 }
-h2{
+title{
   margin: 10px;
 }
 .author{
