--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1 {
   align-items: center;
 }
 
-.book-details {
+.book-detail {
   background-color: rgb(255,255,255); /* Fix for the background color */
   padding: 10px;
 }
@@ -49,7 +49,7 @@ h1 {
   color: #777777;
 }
 
-.price-block {
+.book-details {
   margin: 10px;
   background-color: rgb(46, 204, 113);
   color: rgb(255, 255, 255);
