--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h1 {
 }
 
 .book-detail {
-  background-color: rgb(255,255,255); /* Fix for the background color */
+  background-color: rgb(46, 204, 113); /* Fix for the background color */
   padding: 10px;
 }
 
